balance and order fixed
